# selenium_tkit

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
src/selenium_tkit/: chrome.py  custom_webdriver.py  edge.py  firefox.py
tests/: test_chrome.py
